# asgard

./: .bashrc  .gitignore  .vnv-config.json  CMakeLists.txt  README.md
docker/: Dockerfile
docker/config/asgard/: __init__.py
docker/config/asgard/templates/asgard/: link1.html
src/: adapt.cpp  asgard_vnv.h  build_info.hpp.in  distribution.cpp  distribution.hpp  main.cpp  time_advance.cpp  time_advance.hpp  vv-input.json
src/VnV/: CMakeLists.txt  adaptivity.cpp  meshInfo.cpp  plotCoordinates.cpp  plotError.cpp  plotSolution.cpp  solution.hpp
vnv/: Dockerfile
vnv/config/: vnv.__registration__
vnv/config/asgard/templates/asgard/: sidebar.html
